--- a/src/mail/templates/welcome.ejs
+++ b/src/mail/templates/welcome.ejs
@@ -1,1 +1,13 @@
-<p>Welcome Email</p>
+<p>Dear <%= name %>,</p>
+<p>
+    Thanks for signning up for Nice App. We're very xcited to have you on board.
+</p>
+
+<p> Here are your account details:</p>
+<ul>
+    <li>Email: <%= email %></li>
+    <li>Login URL: <%= loginUrl %></li>
+</ul>
+
+Thanks!
+NestJs Blog Support
