--- a/src/mail/templates/welcome.ejs
+++ b/src/mail/templates/welcome.ejs
@@ -1,6 +1,6 @@
 <p>Dear <%= name %>,</p>
 <p>
-    Thanks for signning up for Nice App. We're very xcited to have you on board.
+    Thanks for signning up for Nice App. We're very excited to have you on board.
 </p>
 
 <p> Here are your account details:</p>
